k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-cloud-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-cloud-api
  template:
    metadata:
      labels:
        app: go-cloud-api
    spec:
      containers:
        - name: go-cloud-api
          image: nadsonoliveiradev/go-cloud-api:latest
          ports:
            - containerPort: 3000
