k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-cloud-api-service
spec:
  selector:
    app: go-cloud-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
