k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-cloud-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: challenge-short-urls-production.up.railway.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-cloud-api-service
                port:
                  number: 80
